--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
     map.centerAndZoom(point, 15);                 // 初始化地图，设置中心点坐标和地图级别
     map.enableScrollWheelZoom();
 
-    startChinaModel();
+    
+    $(document).ready(function() {
+        startChinaModel();
+    });
 
     var rootUrl = "http://121.42.217.4:8080/Plane/simulation";
     function loadData(){
         $.ajax({
             url: rootUrl,
 //             contentType:"application/json",
-            type: 'get',
-            dataType: 'json'
+            type: 'get'
+           // dataType: 'json'
 //             data:JSON.stringify(newApply)
         }).success(function(data){
             alert(data);
@@ -43,8 +46,16 @@
     }
 
     function getNext(){
-        $.getJSON(rootUrl + "/update", function(data) {
-            console.log(data);
+        $.ajax({
+            url: rootUrl+ "/update",
+//             contentType:"application/json",
+            type: 'get'
+            // dataType: 'json'
+//             data:JSON.stringify(newApply)
+        }).success(function(data){
+            alert(data);
+        }).error(function(){
+            alert("获取失败");
         });
     }
 
