--- a/gaode.html
+++ b/gaode.html
@@ -48,20 +48,50 @@
 //                    });
 
 
+
+
     var serverUrl = "http://192.168.1.103:8081/SavePlanes/mng/planes";
 
-    function loadPlaneNames(){
+
+
+    function loadRecordDays(){
+        $.ajax({
+            url: serverUrl + "/days",
+            type: 'get',
+            dataType:'JSON'
+        }).success(function(data){
+            var days = [];
+            days  = data;
+
+            for(var i = 0; i < days.length-1;i++){
+                loadPlaneNames(days[i],days[i+1]);
+                console.log("数据是:\n"+days[i]);
+            }
+
+        }).error(function(data){
+//            alert("获取失败");
+            console.log(data);
+            alert(data);
+        });
+    }
+
+
+    function loadPlaneNames(from,to){
         $.ajax({
             url: serverUrl + "/names",
 //             contentType:"application/json",
             type: 'get',
-            dataType:'JSON'
+            dataType:'JSON',
+            data:{
+                selectDayFrom:from,
+                selectDayTo:to
+            }
         }).success(function(data){
             var names = [];
              names  = data;
 
             for(var i = 0; i < names.length;i++){
-                loadEachPlane(names[i]);
+                loadEachPlane(names[i],from,to);
                 console.log("数据是:\n"+names[i]);
             }
 
@@ -73,14 +103,16 @@
 
     }
 
-    function loadEachPlane(data){
+    function loadEachPlane(data,from,to){
         $.ajax({
             url: serverUrl + "/track",
 //             contentType:"application/json",
             type: 'get',
             dataType:'JSON',
             data:{
-                fli:data
+                fli:data,
+                selectDayFrom:from,
+                selectDayTo:to
             }
         }).success(function(data){
 
@@ -107,86 +139,12 @@
         return '#'+(Math.random()*0xffffff<<0).toString(16);
     }
 
-    var rootUrl = "http://192.168.1.100/sorted_aircraftlist.json";
-
-    function loadData(){
-        $.ajax({
-            url: rootUrl,
-//             contentType:"application/json",
-            type: 'get',
-            // dataType: 'json'
-
-            dataType:'JSON'
-            // dataType: 'json'
-//             data:JSON.stringify(newApply)
-        }).success(function(data){
-
-
-            for(var i = 0;i < data.length;i++){
-                var plane = data[i];
-                console.log($("#"+plane.icao));
-                var infoWindow = new AMap.InfoWindow();
-                function markerOver(e){
-                    infoWindow.setContent(e.target.content);
-                    infoWindow.open(map, e.target.getCenter( ));
-                }
-                function markerOut(e){
-//                    infoWindow.setContent(e.target.content);
-                    infoWindow.close(map, e.target.getCenter( ));
-                }
-// 画轨迹
-
-//                if(plane.icao)
-
-                // 创建点坐标
-                var marker = new AMap.Circle({
-                    center: [plane.lon, plane.lat],
-                    map:map,
-                    fillColor:"#"+plane.hex,
-                    strokeWeight:0,
-                    radius:300,
-                    id:""+plane.icao
-//                    animation:"AMAP_ANIMATION_DROP"
-                });
-                marker.content=  "<h4>"+plane.fli+"</h4><table>"+
-                "<tr><td>航班号</td><td>"+(plane.fli)+"</td></tr>"+
-                "<tr><td>飞机编号(地址)</td><td>  "+(plane.hex)+"</td></tr>"+
-                "<tr><td>经度</td><td>  "+(plane.lon)+"</td></tr>"+
-                "<tr><td>纬度</td><td>  "+(plane.lat)+"</td></tr>"+
-                "<tr><td>海拔</td><td>  "+(plane.alt)+"</td></tr>"+
-                "<tr><td>速度</td><td>  "+(plane.spd)+"</td></tr>"+
-                "<tr><td>方向</td><td>  "+(plane.trk)+"</td></tr>"+
-                "<tr><td>垂直速度</td><td>  "+(plane.vrt)+"</td></tr>"+
-                "<tr><td>距离</td><td>  "+(plane.dis)+"</td></tr>"+
-                "<tr><td>国家</td><td>  "+(plane.cou)+"</td></tr>"+
-                "</table>";
-                //给Marker绑定单击事件
-                marker.on('click', markerOver);
-                marker.on('mouseover',markerOver);
-                marker.on('mouseout',markerOut);
-
-            }
-
-        }).error(function(data){
-//            alert("获取失败");
-            console.log(data);
-            alert(data);
-        });
-    }
-
-    function startChinaModel() {
-        loadData();
-        setInterval(function() {
-            loadData();
-        }, 5000);
-    }
 
 
     $(document).ready(function() {
-//        startChinaModel();
-//        loadEachPlane("KAL958");
-        loadPlaneNames();
+        loadRecordDays();
     });
+
 
 </script>
 </body>
