--- a/gaode.html
+++ b/gaode.html
@@ -50,7 +50,8 @@
 
 
 
-    var serverUrl = "http://192.168.1.103:8081/SavePlanes/mng/planes";
+//    var serverUrl = "http://192.168.1.103:8081/SavePlanes/mng/planes";
+    var serverUrl = "http://172.26.42.9:8081/SavePlanes/mng/planes";
 
 
 
